--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,8 @@
     position: relative;
 }
 
+
+
 .item img {
     width: 100%;
     height: 100%;
@@ -39,7 +41,7 @@
     position: relative;
 }
 
-.thumb:hover {
+.thumb:hover, .item:hover {
     cursor: pointer;
 }
 
